# rocket_sim

./: CMakeLists.txt  README.md  package.xml
config/: rocket.yaml
launch/: rocket_sim.launch  rocket_visualizer.launch
models/gazebo_rocket/: model.config  model.sdf
models/multiPointRobot/: model.config  multiPointRobot.sdf
models/rocket/: model.config  rocket.sdf  rocket_model.urdf  rocket_model.xacro
src/: yo_sdf_joint_plugin.cpp  yo_sdf_joint_plugin.hpp
src/ForcePlugin/: force_plugin.cpp  force_plugin.hpp
worlds/: training.world
